# PaulMarchiset-ProgEtAlgo

./: README.md
TD1/: CMakeLists.txt  helloImac.cpp
TD2/: CMakeLists.txt  imacTD2.cpp
TD4/: CMakeLists.txt  imacTD4.cpp
TD5/: CMakeLists.txt  imacTD5.cpp
TD7/: CMakeLists.txt  imacTD7.cpp
